@@ -1,3 +1,4 @@
+- fix bugs with Sengzhac log not showing and not being able to scroll over it
 - docs: document events/logs system
 - fix race condition when installing/removing shield
 - fix cargo skip of weight check for some items
